--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "1.11.0"
 tokio = { version = "1", features = ["full"] }
-tui = "0.19.0"
+tui = { version = "0.19", features = ["termion"] }
 termion = "1.5.6"
