--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_with = "1.11.0"
 tokio = { version = "1", features = ["full"] }
 tui = { version = "0.19", features = ["termion"] }
 termion = "1.5.6"
+crossterm = "0.19.0"
